# Hasculator

./: .gitignore  .travis.yml  CONTRIBUTING.md  Calculator.hs  Differentiator.hs  Hasculator.cabal  Parser.hs  README.md  Setup.hs  Solve.hs  Solver.hs  Terms.hs  Tests.hs
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: feedback.md
.github/workflows/: build.yml  greeter.yml  stale.yml
Src/: Differentiator.hs  Parser.hs  Program.hs  Solver.hs  Terms.hs
Test/: ReadNShowTests.hs  SolverTests.hs  UnitTests.hs
Test/Tests/: DifferTests.hs  ParserTests.hs  ReadNShowTests.hs  SolverTests.hs  TestHelpers.hs
Tests/: DifferTests.hs  ParserTests.hs  TestHelpers.hs  TestSummary.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
