Cabal-Version: 2.4

Name:          Hasculator
Version:        0.2.0

Synopsis:       String-Parsing and various Term-utilities 
Description:    The Hasculator parses Strings into Terms, and can solve and differentiate Terms. 
                Later Distributions will include also search for maxima/minima aswell as finding zero-points
author:              Leonhard Applis
maintainer:          Leonhard.Applis@Protonmail.com

bug-reports:         https://github.com/Twonki/Hasculator/issues

extra-source-files:  README.md


executable Hasculator
    main-is:            Program.hs 
    other-modules:      Terms,
                        Parser, 
                        Differentiator,
                        Solver

    Build-Depends:      base,
                        extra,
                        split ^>=0.2.3.3

    hs-source-dirs:      Src
    default-language:    Haskell2010


Test-Suite HUnitTestSuite
  type:                exitcode-stdio-1.0
  main-is:             UnitTests.hs
  hs-source-dirs:      Test
                       Src
  other-modules:       Terms,
                       Parser, 
                       Solver,
                       Differentiator,
                       Tests.DifferTests,
                       Tests.ParserTests,
                       Tests.ReadNShowTests,
                       Tests.SolverTests,
                       Tests.TestHelpers
  build-depends:       base,
                       extra,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       split ^>=0.2.3.3

  default-language: Haskell2010