Cabal-Version: 2.4

Name:          Hasculator
Version:        0.2.0

Synopsis:       String-Parsing and various Term-utilities 
Description:    The Hasculator parses Strings into Terms, and can solve and differentiate Terms. 
                Later Distributions will include also search for maxima/minima aswell as finding zero-points
author:              Leonhard Applis
maintainer:          Leonhard.Applis@Protonmail.com

bug-reports:         https://github.com/Twonki/Hasculator/issues

extra-source-files:  README.md

common deps
  build-depends:  base >= 4.13,
                  extra,
                  split ^>=0.2.3.3
  ghc-options:
    -O2
  default-language:    Haskell2010

executable Hasculator
  import:             deps
  main-is:            Program.hs 
  hs-source-dirs:     Src
  other-modules:      Terms,
                      Parser, 
                      Differentiator,
                      Solver

Test-Suite HUnitTestSuite
  import:              deps
  type:                exitcode-stdio-1.0
  main-is:             UnitTests.hs
  hs-source-dirs:      Src
                       Test
  other-modules:       Terms,
                       Parser, 
                       Solver,
                       Differentiator,
                       Tests.DifferTests,
                       Tests.ParserTests,
                       Tests.ReadNShowTests,
                       Tests.SolverTests,
                       Tests.TestHelpers
  build-depends:       test-framework,
                       test-framework-hunit,
                       HUnit